--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-
+<TextView
+    android:id="@+id/tvtitulo"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Minha Lista-Soph"
+    android:textAlignment="center"
+    android:textSize="33sp"
+    android:textStyle="bold"
+    android:visibility="visible"/>
         <Button
             android:id="@+id/btadd"
-            android:layout_width="139dp"
-            android:layout_height="match_parent"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
             android:text="Add" />
 
         <EditText
@@ -24,14 +33,33 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Name"
+            android:hint="digite uma tarefa..."
+            android:visibility="gone"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textSize="20sp" />
     </LinearLayout>
-    <ListView
-    android:id="@+id/lvtarefas"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:contentDescription="Action Add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="40dp"
+            android:clickable="true"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@android:drawable/ic_menu_add"/>
 
+        <ListView
+            android:id="@+id/lvtarefas"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout_editor_absolutey="615dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
 
